# rhodium

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  LICENSE  rdss.cabal  release.nix
.github/workflows/: ci.yml
.nix/: rdss.nix
cpp/: .gitignore  CMakeLists.txt  default.nix  shell.nix
cpp/.nix/: highway.nix  rdss.nix
cpp/src/: ast.cpp  ast.hpp  codegen.hpp  filesystem.hpp  ghd.hpp  interpreter.hpp  macros.hpp  rdss.cpp  union_find_map.hpp
cpp/src/logging/: errno_saver.hpp  log_entry.cpp  log_flags.cpp  log_flags.hpp  logging.cpp  logging_internal.hpp  null_guard.hpp  null_stream.hpp  strerror.cpp  vlog_is_on.hpp
cpp/test/: fhd_tests.cpp
cpp/test/graphs/: Kakuro-medium-159.hg  c4.hg  tpch-manual-q10-min.hg  tpch-synthetic-q5.hg
haskell/: rdss.cabal
src/: Rdss.hs  ast.cpp  ast.hpp  attr.hpp  codegen.hpp  filesystem.hpp  ghd.hpp  interpreter.hpp  lsp.cpp  lsp.hpp  macros.hpp  parser.cpp  parser.hpp  predicate.hpp  rdss.cpp  subprocess.cpp  subprocess.hpp  union_find_map.hpp
src/filesystem/: file_descriptor.hpp  filesystem.hpp  temp_directory.cpp  temp_directory.hpp
src/logging/: check_ops.hpp  condition.hpp  errno_saver.hpp  log_entry.cpp  log_entry.hpp  log_flags.cpp  log_flags.hpp  log_flags.inc  log_message.cpp  log_message.hpp  log_sink.hpp  logging.cpp  logging.hpp  logging_internal.hpp  null_guard.hpp  null_stream.hpp  source_location.hpp  strerror.cpp  strerror.hpp  symbolized_stacktrace.cpp  symbolized_stacktrace.hpp  vlog_is_on.cpp  vlog_is_on.hpp  vlog_is_on.inc
test/: fhd_tests.cpp
test/graphs/: imdb-q13a.hg  tpch-manual-q10.hg  triangle.hg
